Add Support for Custom Avatar via Options Object
